--- a/XMEN.Core/XMEN.Core.csproj
+++ b/XMEN.Core/XMEN.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.15" />
   </ItemGroup>
 
 </Project>
