Methods for retrieving stats and saving DNA checks to the database are added

--- a/XMEN.Api/appsettings.Development.json
+++ b/XMEN.Api/appsettings.Development.json
@@ -1,5 +1,10 @@
 {
+  "ConnectionStrings": {
+    "XMenDB": "Server=xmendb.cjx0c3vl9ehr.us-east-1.rds.amazonaws.com;Port=5432;Database=XMenDB;User Id=postgres;Password=postgres;"
+  },
   "AWS": {
     "Region": "DefaultRegion"
   }
 }
+
+
