--- a/XMEN.Api/appsettings.Production.json
+++ b/XMEN.Api/appsettings.Production.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "XMenDB": "Server=xmendb.cjx0c3vl9ehr.us-east-1.rds.amazonaws.com;Port=5432;Database=XMenDB;User Id=postgres;Password=postgres;"
+  },
   "AWS": {
     "Region": "DefaultRegion"
   }
